--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     },
     "devDependencies": {
         "@types/react": "^17.0.15",
+        "@types/react-router-dom": "^5.1.8",
         "typescript": "^4.3.5"
     }
 }
